--- a/chat_app/package.json
+++ b/chat_app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "task-flow",
+  "name": "chat_app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,9 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^11.10.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.3",
+    "sass": "^1.89.2",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
@@ -23,9 +24,7 @@
     "eslint": "^9.30.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
-    "gh-pages": "^6.3.0",
     "globals": "^16.3.0",
-    "vite": "^7.0.3"
+    "vite": "^7.0.4"
   }
-  
 }
